--- a/Views/FindMonkeyByLocationPage.xaml
+++ b/Views/FindMonkeyByLocationPage.xaml
@@ -2,11 +2,24 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MonkeysMVVM.Views.FindMonkeyByLocationPage"
+             xmlns:viewmodel="clr-namespace:MonkeysMVVM.ViewModels"
+             x:DataType="viewmodel:FindMonkeyByLocationPageViewModel"
              Title="FindMonkeyByLocationPage">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Entry Placeholder="הכנס שם מדינה" PlaceholderColor="Green"
+               Text="{Binding Country}"/>
+        <Button Text="חפש" WidthRequest="150" Command="{Binding SearchByCountryCommand}"/>
+        <Label>
+        <Label.FormattedText>
+            <FormattedString>
+                <Span Text="מספר הקופים שנמצאו" FontAttributes="Bold"/>
+                <Span Text="{Binding Count}"/>
+            </FormattedString>
+        </Label.FormattedText>
+        </Label>
+
+        <Label Text="{Binding Name}"/>
+
+        <Image Source="{Binding ImageUrl}"/>
     </VerticalStackLayout>
 </ContentPage>
